business rules and exception added