@@ -1,69 +1,60 @@
 package com.tobeto.pair9.services.concretes;
 
 import com.tobeto.pair9.core.utilities.mappers.ModelMapperService;
-import com.tobeto.pair9.core.utilities.results.DataResult;
-import com.tobeto.pair9.core.utilities.results.Result;
-import com.tobeto.pair9.core.utilities.results.SuccessDataResult;
-import com.tobeto.pair9.core.utilities.results.SuccessResult;
-import com.tobeto.pair9.entities.concretes.Brand;
+import com.tobeto.pair9.core.utilities.results.*;
 import com.tobeto.pair9.entities.concretes.Model;
 import com.tobeto.pair9.repositories.ModelRepository;
-import com.tobeto.pair9.services.abstracts.BrandService;
 import com.tobeto.pair9.services.abstracts.ModelService;
-import com.tobeto.pair9.services.dtos.brand.responses.GetByIdBrandResponse;
 import com.tobeto.pair9.services.dtos.model.requests.AddModelRequest;
 import com.tobeto.pair9.services.dtos.model.requests.UpdateModelRequest;
 import com.tobeto.pair9.services.dtos.model.responses.GetListModelResponse;
+import com.tobeto.pair9.services.rules.ModelBusinessRules;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
 public class ModelManager implements ModelService {
-    private ModelRepository modelRepository;
-    private ModelMapperService modelMapperService;
-    private BrandService brandService;
-
+    private final ModelRepository modelRepository;
+    private final ModelMapperService modelMapperService;
+    private final ModelBusinessRules modelBusinessRules;
 
     @Override
-    public DataResult<List<GetListModelResponse>> getAll() {
+    public BaseResult<List<GetListModelResponse>> getAll() {
         List<Model> models = modelRepository.findAll();
-        return new SuccessDataResult(models.stream().map(model -> this.modelMapperService.forResponse().map(model, GetListModelResponse.class))
-                .collect(Collectors.toList()),"Tüm veriler eklendi");
+        var result = models.stream().map(model -> this.modelMapperService.forResponse().map(model, GetListModelResponse.class)).toList();
+        return new BaseResult<>(true,result);
     }
 
     @Override
-    public Result add(AddModelRequest request) {
-        if(modelRepository.existsByName(request.getName())){
-            throw new RuntimeException("There cannot be same model");
-        }
+    public BaseResult add(AddModelRequest request) {
+        modelBusinessRules.isExistModelByName(request.getName());
+        modelBusinessRules.isExistBrandById(request.getBrandId());
+        Model model = this.modelMapperService.forRequest().map(request,Model.class);
+        model.setId(null);
+        this.modelRepository.save(model);
+        return new BaseResult<>(true, Messages.modelAdded);
+    }
+
+    @Override
+    public BaseResult update(UpdateModelRequest request) {
+        modelBusinessRules.isExistModelById(request.getId());
+        modelBusinessRules.isExistBrandById(request.getBrandId());
         Model model = this.modelMapperService.forRequest().map(request,Model.class);
         this.modelRepository.save(model);
-        return new SuccessResult("Eklendi");
+        return new BaseResult<>(true, Messages.modelUpdated);
     }
 
     @Override
-    public Result update(UpdateModelRequest request) {
-        if(modelRepository.existsByName(request.getName())){
-            throw new RuntimeException("There cannot be same model");
-        }
-        Model model = this.modelMapperService.forRequest().map(request,Model.class);
-        this.modelRepository.save(model);
-        return new SuccessResult("Güncellendi");
-    }
-
-    @Override
-    public Result delete(int id) {
+    public BaseResult delete(int id) {
         this.modelRepository.deleteById(id);
-        return new SuccessResult("Silindi");
+        return new BaseResult<>(true, Messages.modelDeleted);
     }
 
     @Override
-    public boolean existsId(int id) {
+    public boolean existsModelById(Integer id) {
         return modelRepository.existsById(id);
     }
-
 }
